# abx-pkg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  pydantic_pkgr  pyproject.toml  tests.py
.github/workflows/: deploy-pages.yml  publish.yml  python-app.yml  release.yml  tests.yml
abx_pkg/: __init__.py  admin.py  apps.py  base_types.py  binary.py  binprovider.py  binprovider_ansible.py  binprovider_apt.py  binprovider_bash.py  binprovider_brew.py  binprovider_bun.py  binprovider_cargo.py  binprovider_chromewebstore.py  binprovider_custom.py  binprovider_deno.py  binprovider_docker.py  binprovider_gem.py  binprovider_go_get.py  binprovider_goget.py  binprovider_nix.py  binprovider_npm.py  binprovider_pip.py  binprovider_playwright.py  binprovider_pnpm.py  binprovider_puppeteer.py  binprovider_pyinfra.py  binprovider_uv.py  binprovider_yarn.py  cli.py  exceptions.py  logging.py  metadata_cache.py  semver.py  settings.py  shallowbinary.py  views.py
abx_pkg/js/chrome/: chrome_utils.js
abxpkg/: __init__.py  admin.py  apps.py  base_types.py  binary.py  binprovider.py  binprovider_ansible.py  binprovider_apt.py  binprovider_bash.py  binprovider_brew.py  binprovider_bun.py  binprovider_cargo.py  binprovider_chromewebstore.py  binprovider_deno.py  binprovider_docker.py  binprovider_gem.py  binprovider_goget.py  binprovider_nix.py  binprovider_npm.py  binprovider_pip.py  binprovider_playwright.py  binprovider_pnpm.py  binprovider_puppeteer.py  binprovider_pyinfra.py  binprovider_scoop.py  binprovider_uv.py  binprovider_yarn.py  cli.py  config.py  exceptions.py  logging.py  models.py  semver.py  settings.py  shallowbinary.py  views.py  windows_compat.py
abxpkg/js/chrome/: chrome_utils.js  config.json
django_example_project/: README.md  manage.py
django_example_project/project/: admin.py  models.py  settings.py  views.py
django_example_project/project/migrations/: 0001_initial.py  0002_alter_dependency_options_dependency_min_version.py
docs/: generate.py  index.html  index.html.j2
pydantic_pkgr/: binprovider.py  semver.py
tests/: conftest.py  test_abx_pkg_lib_dir.py  test_ansibleprovider.py  test_aptprovider.py  test_bashprovider.py  test_binary.py  test_binprovider.py  test_brewprovider.py  test_bunprovider.py  test_cargoprovider.py  test_central_lib_dir.py  test_chromewebstoreprovider.py  test_cli.py  test_customprovider.py  test_denoprovider.py  test_dockerprovider.py  test_envprovider.py  test_gemprovider.py  test_gogetprovider.py  test_install.py  test_module_api.py  test_nixprovider.py  test_npmprovider.py  test_pipprovider.py  test_playwrightprovider.py  test_pnpmprovider.py  test_puppeteerprovider.py  test_pyinfraprovider.py  test_security_controls.py  test_semver.py  test_uvprovider.py  test_yarnprovider.py
