[project]
name = "abx-pkg"
version = "1.9.12"
description = "System package manager interfaces with Python type hints"
authors = [
    {name = "Nick Sweeting", email = "abx-pkg-pyproject-toml@sweeting.me"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "pydantic",
    "packagemanager",
    "apt",
    "brew",
    "pip",
    "system",
    "dependencies",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

dependencies = [
    "pip>=26.0.1",
    "typing-extensions>=4.15.0",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
rich = [
    "rich>=14.0.0",
]
pyinfra = [
    'pyinfra>=3.6.1',
]
ansible = [
    'ansible>=12.3.0',
    'ansible-core>=2.0.0',
    'ansible-runner>=2.4.2',
]
all = [
    "abx-pkg[rich,pyinfra,ansible]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright",
    "django>=4.0",
    "django-stubs>=5.0.0",
    "django-admin-data-views>=0.3.1",
    "django-pydantic-field>=0.3.9",
    "django-jsonform>=2.22.0",
    "pytest>=9.0.2",
    "rich>=14.0.0",
]

[tool.mypy]
mypy_path = "abx_pkg"
python_version = "3.10"
warn_return_any = "True"
warn_unused_configs = "True"
plugins = [
    "mypy_django_plugin.main",
]

[tool.pyright]
include = ["abx_pkg"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"


[project.urls]
Homepage = "https://github.com/ArchiveBox/abx-pkg"
Source = "https://github.com/ArchiveBox/abx-pkg"
Documentation = "https://github.com/ArchiveBox/abx-pkg"
"Bug Tracker" = "https://github.com/ArchiveBox/abx-pkg/issues"
Changelog = "https://github.com/ArchiveBox/abx-pkg/releases"
Donate = "https://github.com/ArchiveBox/ArchiveBox/wiki/Donations"
